# zk-merkle-proofs

./: .cursorignore  .env.example  .gitignore  .gitmodules  Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs  types.rs
common/src/merkle/: types.rs
coprocessor/: Cargo.toml
coprocessor/src/: config.rs  lib.rs
domains/ethereum/: Cargo.toml  README.md
domains/ethereum/src/: lib.rs  rpc.rs
domains/ethereum/src/ethereum_rpc/: mod.rs  rlp.rs  rpc.rs
domains/ethereum/src/merkle_lib/: keccak.rs  logs.rs  macros.rs  mod.rs  test_vector.rs  types.rs
domains/ethereum/src/merkle_lib/tests/: account.rs  alloy.rs  defaults.rs  merkle.rs  mod.rs  persistent.rs  test_vector.rs  vault.rs
domains/ethereum/src/merkle_lib/tests/data/: account_proof.json  storage_proof.json
domains/ethereum/src/timewave_rlp/: README.md  alloy_bytes.rs  decode.rs  encode.rs  error.rs  header.rs  mod.rs
domains/ethereum/src/timewave_trie/: README.md  constants.rs  mod.rs  types.rs  verify.rs
domains/ics23-cosmos/: Cargo.toml  README.md
domains/ics23-cosmos/src/: keys.rs  rpc.rs
domains/ics23-cosmos/src/merkle_lib/: helpers.rs  mod.rs  types.rs
domains/ics23-cosmos/src/merkle_lib/tests/: defaults.rs  merkle.rs  mod.rs  vault.rs
domains/neutron/: Cargo.toml  README.md
domains/neutron/src/: keys.rs  lib.rs  rpc.rs
domains/neutron/src/merkle_lib/: helpers.rs  mod.rs  test_vector.rs  types.rs
domains/neutron/src/merkle_lib/tests/: defaults.rs  merkle.rs  mod.rs  test_vector.rs  vault.rs
domains/solana/: Cargo.toml  README.md
domains/solana/src/: main.rs
ethereum/: Cargo.toml  README.md
ethereum/src/: lib.rs  mock.rs  test_vector.rs  types.rs
ethereum/src/merkle_lib/: mod.rs  test_vector.rs  types.rs
ethereum/src/merkle_lib/tests/: merkle.rs
ethereum/src/tests/: merkle.rs
example-programs/sp1/cross-chain-merkle-program/cross-chain-merkle-guest/: Cargo.toml
example-programs/sp1/cross-chain-merkle-program/cross-chain-merkle-guest/src/: main.rs
example-programs/sp1/cross-chain-merkle-program/prover/: Cargo.toml  README.md
example-programs/sp1/cross-chain-merkle-program/prover/src/: lib.rs
example-programs/sp1/cross-chain-merkle-program/types/src/: lib.rs
example-programs/sp1/cross-chain-message-builder-program/cross-chain-message-builder-guest/: Cargo.toml
example-programs/sp1/cross-chain-message-builder-program/prover/: Cargo.toml  README.md
example-programs/sp1/cross-chain-message-builder-program/prover/src/: lib.rs
example-programs/sp1/cross-chain-message-builder-program/types/: Cargo.toml
example-programs/sp1/cross-chain-vault-program/cross-chain-vault-guest/: Cargo.toml
example-programs/sp1/cross-chain-vault-program/prover/: Cargo.toml  README.md  build.rs
example-programs/sp1/cross-chain-vault-program/types/: Cargo.toml
example-programs/sp1/multi-chain-merkle-program/multi-chain-merkle-guest/: Cargo.toml
example-programs/sp1/multi-chain-merkle-program/prover/: Cargo.toml  README.md  build.rs
example-programs/sp1/vault-zk-rate-program/prover/: Cargo.toml  build.rs
example-programs/sp1/vault-zk-rate-program/prover/src/: lib.rs
example-programs/sp1/vault-zk-rate-program/types/: Cargo.toml
example-programs/sp1/vault-zk-rate-program/vault-zk-rate-guest/: Cargo.toml
example-programs/sp1/vault-zk-transfer-program/prover/: Cargo.toml  build.rs
example-programs/sp1/vault-zk-transfer-program/types/: Cargo.toml
example-programs/sp1/vault-zk-transfer-program/vault-zk-transfer-guest/: Cargo.toml
example-programs/sp1/vault-zk-withdrawal-program/prover/: Cargo.toml  build.rs
example-programs/sp1/vault-zk-withdrawal-program/types/: Cargo.toml
example-programs/sp1/vault-zk-withdrawal-program/vault-zk-withdrawal-guest/: Cargo.toml
examples/contracts/ethereum-storage-contract/: deploy.sh  install.sh
examples/contracts/ethereum-storage-contract/cache/: solidity-files-cache.json
examples/contracts/ethereum-storage-contract/src/: Counter.sol
examples/contracts/ethereum-vault-contract/: deploy.sh  verify.sh
examples/contracts/ethereum-vault-contract/script/: Vault.s.sol
examples/contracts/ethereum-vault-contract/src/: Vault.sol
examples/contracts/ethereum-vault-contract/test/: Vault.t.sol
examples/contracts/neutron-storage-contract/: Cargo.toml
examples/contracts/neutron-storage-contract/artifacts/: checksums.txt  minimal_contract.wasm
examples/contracts/neutron-storage-contract/src/: contract.rs  msg.rs  state.rs
examples/contracts/neutron-vault-contract/: Cargo.toml  optimize.sh
examples/contracts/neutron-vault-contract/artifacts/: checksums.txt  neutron_vault_contract.wasm
examples/contracts/neutron-vault-contract/src/: contract.rs  error.rs  msg.rs  state.rs
examples/sp1/cross-chain-merkle-program/cross-chain-merkle-guest/: Cargo.toml
examples/sp1/cross-chain-merkle-program/prover/: Cargo.toml  README.md  build.rs
examples/sp1/cross-chain-merkle-program/types/: Cargo.toml
examples/sp1/cross-chain-message-builder-program/cross-chain-message-builder-guest/: Cargo.toml
examples/sp1/cross-chain-message-builder-program/prover/: Cargo.toml  README.md  build.rs
examples/sp1/cross-chain-message-builder-program/types/: Cargo.toml
examples/sp1/vault-zk-rate-program/vault-zk-rate-guest/: Cargo.toml
examples/storage-contract/: README.md  verify.sh
examples/storage-contract/script/: Counter.s.sol
examples/storage-contract/test/: Counter.t.sol
neutron/: Cargo.toml  README.md
neutron/src/: helpers.rs  lib.rs  test_vector.rs  types.rs
neutron/src/merkle_lib/: mod.rs  test_vector.rs  types.rs
neutron/src/merkle_lib/tests/: merkle.rs
neutron/src/tests/: merkle.rs
prover/: Cargo.toml  README.md  build.rs
prover-utils/: Cargo.toml
prover-utils/src/merkle/: mod.rs  types.rs
prover/src/: sp1.rs
rlp-fork/: Cargo.toml  README.md
rlp-fork/src/: alloy_bytes.rs  decode.rs  encode.rs  error.rs  header.rs  lib.rs
solana-coprocessor/: Cargo.toml
sp1/merkle-program/: Cargo.toml
sp1/merkle-program/src/: main.rs
verification-logic/: Cargo.toml
verifier/: Cargo.toml
verifier/src/: lib.rs
(+18 files in other folders)
