[workspace]
members = ["common", "domains/ethereum", "rlp-fork"]
resolver = "2"

[workspace.dependencies]
ethereum = { path = "domains/ethereum" }
base64 = "0.22.1"
hex = "0.4"
common = { path = "common" }
tokio = { version = "1.4.11", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12"
url = "2.5"
dotenvy = "0.15"
bytes = { version = "1.4", default-features = false }
hex-literal = "0.4"