[workspace]
members = ["common", "domains/ethereum", "domains/ics23-cosmos"]
resolver = "2"

[workspace.dependencies]
ethereum = { path = "domains/ethereum" }
ics23-cosmos = { path = "domains/ics23-cosmos" }
base64 = "0.22.1"
hex = "0.4"
common = { path = "common" }
tokio = { version = "1.45.0", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12"
url = "2.5"
dotenvy = "0.15"
bytes = { version = "1.4", default-features = false }
hex-literal = { version = "0.4", default-features = false }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
