[workspace]
members = ["common", "domains/ethereum", "domains/ics23-cosmos"]
resolver = "2"

[workspace.dependencies]
ethereum = { path = "domains/ethereum" }
ics23-cosmos = { path = "domains/ics23-cosmos" }
base64 = "0.22.1"
hex = "0.4"
common = { path = "common" }
tokio = { version = "1.45.0", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = { version = "1", default-features = false }
reqwest = { version = "0.12", default-features = false }
url = { version = "2.5", default-features = false }
dotenvy = { version = "0.15", default-features = false }
bytes = { version = "1.4", default-features = false }
hex-literal = { version = "0.4", default-features = false }
anyhow = { version = "1.0", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
