[package]
name = "coprocessor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
neutron = { path = "../domains/neutron", features = ["web"] }
ethereum = { path = "../domains/ethereum", features = ["web"] }
common.workspace = true
tokio.workspace = true
hex.workspace = true
alloy = { version = "0.12.5", features = ["full"] }
base64.workspace = true
