[package]
name = "coprocessor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
neutron = { path = "../domains/neutron", features = ["no-sp1"] }
ethereum = { path = "../domains/ethereum", features = ["no-sp1"] }
common.workspace = true
tokio.workspace = true
hex.workspace = true
alloy = { version = "0.12.5", features = ["full"] }
base64.workspace = true
eth_trie = "0.5.0"
[features]
tests-online = []
