[package]
name = "neutron"
version = "0.1.0"
edition = "2021"

[dependencies]
tendermint = "=0.38.1"
tendermint-proto = "=0.38.1"
tendermint-rpc = { version = "=0.38.1", features = ["http-client"] }
tokio = "1.43"
hex = "0.4"
quartz-cw-proof = "0.1.0"
base64 = "0.22.1"
cosmrs = "0.18"
ics23 = { version = "0.12.0", default-features = false, features = [
    "host-functions",
] }
common.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
