[package]
name = "prover"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde_json.workspace = true
merkle-program.workspace = true
common.workspace = true
sp1-sdk.workspace = true
ethereum = { path = "../ethereum", features = ["web"] }
dotenvy = { workspace = true }
alloy-primitives = "0.8.12"
alloy = { version = "0.11.1", features = ["full"] }
alloy-rlp = { version = "0.3.11" }
url.workspace = true

[build-dependencies]
sp1-helper = "4.0.0"
