[package]
name = "ics23-cosmos"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-std = { version = "2.2.2", optional = true }
tendermint = { git = "https://github.com/jonas089/tendermint-rs", branch = "v0.38.1-borsh", features = [
    "borsh",
] }
tendermint-proto = { git = "https://github.com/jonas089/tendermint-rs", branch = "v0.38.1-borsh", optional = true }
tendermint-rpc = { git = "https://github.com/jonas089/tendermint-rs", branch = "v0.38.1-borsh", features = [
    "http-client",
], optional = true }
tokio = { version = "1.43", optional = true }
hex = "0.4"
base64.workspace = true
cosmrs = "0.18"
ics23 = { version = "0.12.0", default-features = false, features = [
    "host-functions",
] }
common.workspace = true
serde = { workspace = true, optional = true }
serde_json.workspace = true
borsh = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
anyhow.workspace = true

[features]
default = ["serde", "borsh"]
no-zkvm = [
    "tokio",
    "dotenvy",
    "tendermint-proto",
    "tendermint-rpc",
    "cosmwasm-std",
]
borsh = ["dep:borsh"]
serde = ["dep:serde"]
