[package]
name = "cross-chain-message-builder-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
cross-chain-message-builder-types = { path = "../types" }

tokio.workspace = true
serde_json.workspace = true
base64.workspace = true
cross-chain-message-builder-guest.workspace = true
common.workspace = true
sp1-sdk.workspace = true
prover-utils.workspace = true
ethereum = { path = "../../../../domains/ethereum", features = ["no-sp1"] }
neutron = { path = "../../../../domains/neutron", features = ["no-sp1"] }
dotenvy = { workspace = true }
alloy-primitives = "0.8.12"
alloy = { version = "0.11.1", features = ["full"] }
alloy-rlp = { version = "0.3.11" }
url.workspace = true

[build-dependencies]
sp1-helper = "4.0.0"

[features]
zk-tests = []
