[package]
name = "cross-chain-merkle-program-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
ethereum = { path = "../../../../domains/ethereum" }
neutron = { path = "../../../../domains/neutron" }
alloy-sol-types = "0.8.23"
cosmwasm-schema = "2.2.2"
